[package]
name = "e"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
futures-timer = "3.0.3"
ropey = "1.6.1"
termion = "3.0.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
unicode-width = "0.1.11"
